fixed enter press on iphone and review score spacing

--- a/src/style/sections/_movie-reviews.scss
+++ b/src/style/sections/_movie-reviews.scss
@@ -64,6 +64,9 @@
 		display: flex;
 		justify-content: flex-start;
 		align-items: center;
+		&:first-child {
+			margin-right: 0.5rem;
+		}
 		&:last-child {
 			margin-right: 0.5rem;
 		}
